implemented Spring Security and changed most of the thymleaf templates to work with it