@@ -1,22 +1,20 @@
 package twistthrottle.controllers;
 
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpSession;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.MediaType;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.client.HttpClientErrorException;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.client.RestTemplate;
 import twistthrottle.dtos.CartItem;
 import twistthrottle.dtos.ProductDTO;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
+
 
 @Controller
 @RequestMapping("/cart")
@@ -26,15 +24,19 @@ public class CartClientController {
     private static final String CART_SERVICE_URL = "http://localhost:8081/api/cart";
 
     @GetMapping
-    public String showCart(Model model, HttpServletRequest request) {
-        List<CartItem> cart = Arrays.asList(Objects.requireNonNull(
-                restTemplate.getForObject(CART_SERVICE_URL, CartItem[].class)));
-        model.addAttribute("cart", cart);
-        Boolean isLoggedIn = (request.getSession().getAttribute("loggedInUser") != null);
-        model.addAttribute("isLoggedIn", isLoggedIn);
-        if(!isLoggedIn){
-            return "login";
+    public String showCart(Model model) {
+
+        try {
+            CartItem[] cartItemsArray = restTemplate.getForObject(CART_SERVICE_URL, CartItem[].class);
+            List<CartItem> cart = (cartItemsArray != null) ? Arrays.asList(cartItemsArray) : List.of(); // Handle potential null response
+            model.addAttribute("cart", cart);
+        } catch (Exception e) {
+            System.err.println("Error fetching cart from cart service: " + e.getMessage());
+            model.addAttribute("errorMessage", "Could not load cart contents.");
+            model.addAttribute("cart", List.of());
         }
+
+
         return "cart";
     }
 
@@ -43,71 +45,58 @@ public class CartClientController {
                             @RequestParam String name,
                             @RequestParam double price,
                             @RequestParam int quantity) {
-        ProductDTO product = new ProductDTO(productId, name, price,quantity);
-        restTemplate.postForObject(
-                CART_SERVICE_URL + "/add?price=" + price + "&quantity=" + quantity,
-                product,
-                String.class
-        );
-        return "redirect:/cart";
-    }
 
-    @PostMapping("/remove")
-    public String removeFromCart(@RequestParam Long productId) {
-        restTemplate.delete(CART_SERVICE_URL + "/remove/" + productId);
-        return "redirect:/cart";
-    }
-    @PostMapping("/update")
-    public String updateCartItem(@RequestParam Long productId,
-                                 @RequestParam int quantity,
-                                 HttpSession session,
-                                 Model model) {
+        ProductDTO product = new ProductDTO(productId, name, price, quantity);
 
         try {
-            HttpHeaders headers = new HttpHeaders();
-            headers.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-
-            HttpEntity<?> requestEntity = new HttpEntity<>(headers);
-
-
-            restTemplate.exchange(
-                    CART_SERVICE_URL + "/update?productId=" + productId + "&quantity=" + quantity,
-                    HttpMethod.PUT,
-                    requestEntity,
+            restTemplate.postForObject(
+                    CART_SERVICE_URL + "/add?price=" + price + "&quantity=" + quantity,
+                    product,
                     String.class
             );
-        } catch (HttpClientErrorException e) {
+        } catch (Exception e) {
+            System.err.println("Error calling cart service /add endpoint: " + e.getMessage());
+        }
 
-            model.addAttribute("errorMessage", "Error updating cart: " + e.getResponseBodyAsString());
-            List<CartItem> cart = Arrays.asList(Objects.requireNonNull(
-                    restTemplate.getForObject(CART_SERVICE_URL, CartItem[].class)));
-            model.addAttribute("cart", cart);
-            return "cart";
-        }
-        catch (Exception e) {
-            model.addAttribute("errorMessage", "An unexpected error occurred.");
-            List<CartItem> cart = Arrays.asList(Objects.requireNonNull(
-                    restTemplate.getForObject(CART_SERVICE_URL, CartItem[].class)));
-            model.addAttribute("cart", cart);
-            return "cart";
-        }
 
         return "redirect:/cart";
     }
     @PostMapping("/checkout")
-    public String confirmOrder(@RequestParam String shippingAddress, Model model, HttpSession session) {
-        String userEmail = (String) session.getAttribute("loggedInUserEmail");
+    public String confirmOrder(@RequestParam String shippingAddress, Model model, @AuthenticationPrincipal UserDetails userDetails) { // Use AuthenticationPrincipal
 
-        if (userEmail == null) {
+        if (userDetails == null) {
             return "redirect:/login";
         }
+        String userEmail = userDetails.getUsername();
 
-        String response = restTemplate.postForObject(
-                CART_SERVICE_URL + "/checkout?shippingAddress=" + shippingAddress + "&userEmail=" + userEmail,
-                null,
-                String.class
-        );
-        model.addAttribute("message", response);
-        return "order-confirmation";
+        if (shippingAddress == null || shippingAddress.trim().isEmpty()) {
+            model.addAttribute("errorMessage", "Shipping address is required.");
+            CartItem[] cartItemsArray = restTemplate.getForObject(CART_SERVICE_URL, CartItem[].class);
+            List<CartItem> cart = (cartItemsArray != null) ? Arrays.asList(cartItemsArray) : List.of();
+            model.addAttribute("cart", cart);
+            return "cart";
+        }
+
+
+        try{
+            String response = restTemplate.postForObject(
+                    CART_SERVICE_URL + "/checkout?shippingAddress=" + shippingAddress + "&userEmail=" + userEmail,
+                    null,
+                    String.class
+            );
+            model.addAttribute("message", response);
+
+            return "order-confirmation";
+        } catch(Exception e){
+            System.err.println("Error during checkout POST to cart service: " + e.getMessage());
+            model.addAttribute("errorMessage", "Checkout failed. Please try again.");
+            CartItem[] cartItemsArray = restTemplate.getForObject(CART_SERVICE_URL, CartItem[].class);
+            List<CartItem> cart = (cartItemsArray != null) ? Arrays.asList(cartItemsArray) : List.of();
+            model.addAttribute("cart", cart);
+            return "cart";
+        }
     }
+
+
+
 }
